--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,17 @@ htmlcov/
 .env
 .env.local
 
+# Database files
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+scraper_history.db
+test_scraper_history.db
+
+# Database config (keep template)
+db_config.py
+
 # Temporary files
 temp/
 tmp/
