--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ lxml==4.9.3
 # Data Processing
 pandas==2.1.3
 
+# Database Support
+mysql-connector-python==8.2.0
+
 # Additional utilities
 python-dateutil==2.8.2
 Pillow==10.1.0
