--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ selenium==4.15.2
 webdriver-manager==4.0.1
 beautifulsoup4==4.12.2
 requests==2.31.0
+lxml==4.9.3
+reportlab==4.0.7
+mysql-connector-python==8.2.0
+python-dateutil==2.8.2
