Add 3 new scrapers, update UI, create documentation and improve functionality

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,21 @@ data/
 # Database files
 scraper_history.db
 *.db
+*.db-journal
+*.sqlite
+*.sqlite3
+
+# Chrome/Selenium files
+chromedriver.exe
+geckodriver.exe
+*.crx
+
+# Export files
+exports/
+*.csv
+*.pdf
+
+# Test files
+test_scrapers.py
+test_*.py
+
