--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,36 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov flake8 bandit pylint black isort
         pip install -r requirements.txt
+    
+    - name: Code formatting check with Black
+      run: |
+        black --check --diff .
+      continue-on-error: true
+    
+    - name: Import sorting check with isort
+      run: |
+        isort --check-only --diff .
+      continue-on-error: true
+    
+    - name: Lint with flake8
+      run: |
+        # Stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Exit-zero treats all errors as warnings
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
+    - name: Lint with pylint
+      run: |
+        pylint **/*.py --exit-zero --max-line-length=127 --disable=C0111,R0903
+      continue-on-error: true
+    
+    - name: Security check with Bandit
+      run: |
+        bandit -r . -f json -o bandit-report.json || true
+        bandit -r . -ll -f txt
+      continue-on-error: true
     
     - name: Run regression test suite
       run: |
